Fix header z-index and removed file input in post form

--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -6,7 +6,6 @@
   height: 77px;
   width: 100%;
   top: 0px;
-  z-index: 1;
 }
 
 .header {
