--- a/app/assets/stylesheets/api/post_form.scss
+++ b/app/assets/stylesheets/api/post_form.scss
@@ -13,6 +13,11 @@
   margin: 10px 0 10px 0;
 }
 
+.file-button {
+  width: 100px;
+  cursor: pointer;
+}
+
 .share-button {
   background: #3897f0;
   color: #fff;
